airshift - fixed size problem of button cart

--- a/Day- Ex5 - Airshift/scss/_app.scss
+++ b/Day- Ex5 - Airshift/scss/_app.scss
@@ -1250,7 +1250,7 @@ p {
   // Product page
   .product-link {
     &__text {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       transform: scaleX(1.15);
     }
   }
